<resources>
    <string name="app_name">PasswordApp</string>
    <!--Drawer menu-->
    <string name="Opcion_Todas">Todas</string>
    <string name="Opcion_Ajustes">Ajustes</string>
    <string name="Opcion_Salir">Salir</string>
    <!--Drawer Layout-->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_agregar_description">boton agregar</string>

    <!--Diseño agregar Password-->

    <string name="EtTitulo">Titulo</string>
    <string name="EtCuenta">Cuenta</string>
    <string name="EtNombreUsuario">Nombre de usuario</string>
    <string name="EtPassword">Contraseña</string>
    <string name="EtSitioWeb">Sitio Web</string>
    <string name="EtNota">Nota</string>
    <!--Menu agregar password-->
    <string name="GuardarPassword">Guardar</string>
    <!--Item password-->
    <string name="Item_titulo">Titulo</string>
    <string name="Item_cuenta">Cuenta</string>
    <string name="Item_nombre_usuario">Nombre de usuario</string>
    <string name="Item_password">Contraseña</string>
    <string name="Item_sitio_web">Sitio Web</string>
    <string name="Item_nota">Nota</string>

    <!--Menu fragmento Todas-->
    <string name="menu_Numeros_Registros">Numero de registros</string>">
    <!--buscara registros-->
    <string name="menu_Buscar_Registros">Buscar Registros</string>

    <!--Cuadro de dialogos- numero de registros-->
    <string name="TxtTotal">Total de registros</string>
    <string name="Total">--</string>
    <string name="btnEntendidoTotal">Entendido</string>
    <!--Detalles registro-->
    <string name="Txt_D_Titulo">Titulo: </string>
    <string name="D_Titulo"> -- </string>
    <string name="Txt_D_Cuenta">Cuenta: </string>
    <string name="D_Cuenta"> -- </string>
    <string name="Txt_D_Nombre_Usuario">Nombre de usuario: </string>
    <string name="D_Nombre_Usuario"> -- </string>
    <string name="Txt_D_Password">Contraseña: </string>
    <string name="D_Password"> -- </string>
    <string name="Txt_D_Sitio_Web">Sitio Web: </string>
    <string name="D_Sitio_Web"> -- </string>
    <string name="Txt_D_Nota">Nota: </string>
    <string name="D_Nota"> -- </string>
    <string name="Txt_D_Tiempo_Registro">Tiempo de registro: </string>
    <string name="D_Tiempo_Registro"> -- </string>
    <string name="Txt_D_Tiempo_Actualizacion">Tiempo de actualización: </string>
    <string name="D_Tiempo_Actualizacion"> -- </string>


</resources>