<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_item_password"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/item_password"
            android:layout_centerVertical="true"
            android:padding="8dp"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_toStartOf="@id/button_mas_opciones"
            android:layout_toEndOf="@id/img_item_password"
            android:layout_marginStart="2dp">
            <TextView
                android:id="@+id/tv_item_titulo"
                android:text="@string/Item_titulo"
                android:fontFamily="@font/opensans_bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_item_cuenta"
                android:text="@string/Item_cuenta"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/tv_item_nombre_usuario"
                android:text="@string/Item_nombre_usuario"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/tv_item_password"
                android:text="@string/Item_password"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_item_sitio_web"
                android:text="@string/Item_sitio_web"
                android:visibility="gone"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/tv_item_nota"
                android:text="@string/Item_nota"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_mas_opciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/icon_mas_opciones"
        android:background="@null"

        />

    </RelativeLayout>

</androidx.cardview.widget.CardView>