<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F4F4"
    tools:context=".OpcionesPassword.Agregar_Password">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!--Titulo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--Con el hint llenas seria el placeholder-->
            <EditText
                android:id="@+id/EtTitulo"
                android:hint="@string/EtTitulo"
                android:padding="15dp"
                android:textSize="25sp"
                android:inputType="textCapWords|text"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



            <!--Cuenta-->
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/EtCuenta"
                android:hint="@string/EtCuenta"
                android:padding="15dp"
                android:textSize="18sp"
                android:inputType="textCapWords|text"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Nombre Usuario-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/EtNombreUsuario"
                android:hint="@string/EtNombreUsuario"
                android:maxLines="1"
                android:padding="15dp"
                android:textSize="18sp"
                android:inputType="textCapWords|text"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <EditText
                android:id="@+id/EtPassword"
                android:hint="@string/EtPassword"
                android:padding="15dp"
                android:maxLines="1"
                android:textSize="18sp"
                android:inputType="textCapWords|text"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Sitio web-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/EtSitioWeb"
                android:hint="@string/EtSitioWeb"
                android:maxLines="1"
                android:padding="15dp"
                android:textSize="18sp"
                android:inputType="textCapWords|text"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Nota-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--con gravity posicionamos el titulo del placeholder-->
            <EditText
                android:id="@+id/EtNota"
                android:hint="@string/EtNota"
                android:padding="15dp"
                android:gravity="start"
                android:height="150dp"
                android:textSize="18sp"
                android:inputType="textCapSentences|textMultiLine"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>